syntax = "proto3";

option java_outer_classname = "HfpProto";

package pandora;

import "pandora_experimental/host.proto";
import "google/protobuf/empty.proto";

// Service to trigger HFP (Hands Free Profile) procedures.
service HFP {
  // Enable Service level connection
  rpc EnableSlc(EnableSlcRequest) returns (google.protobuf.Empty);
  // Disable Service level connection
  rpc DisableSlc(DisableSlcRequest) returns (google.protobuf.Empty);
  // Change the battery level to the one requested
  rpc SetBatteryLevel(SetBatteryLevelRequest) returns (google.protobuf.Empty);
  // Decline a call
  rpc DeclineCall(DeclineCallRequest) returns (DeclineCallResponse);
  // Set the audio path
  rpc SetAudioPath(SetAudioPathRequest) returns (SetAudioPathResponse);
}

// Request of the `EnableSlc` method.
message EnableSlcRequest {
  // Connection crafted by grpc server
  Connection connection = 1;
}

// Request of the `DisableSlc` method.
message DisableSlcRequest {
  // Connection crafted by grpc server
  Connection connection = 1;
}

// Request of the `SetBatteryLevel` method.
message SetBatteryLevelRequest {
  // Connection crafted by grpc server
  Connection connection = 1;
  // Battery level to be set on the DUT
  int32 battery_percentage = 2;
}

message DeclineCallRequest {}

message DeclineCallResponse {}

enum AudioPath {
  AUDIO_PATH_UNKNOWN = 0;
  AUDIO_PATH_SPEAKERS = 1;
  AUDIO_PATH_HANDSFREE = 2;
}

message SetAudioPathRequest {
  AudioPath audio_path = 1;
}

message SetAudioPathResponse {}
